crates/diffguard-analytics/tests/snapshots/snapshot_tests__append_trend_run_no_trim.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: history
---
{
  "schema": "diffguard.trend_history.v1",
  "runs": [
    {
      "started_at": "2026-01-15T12:00:00Z",
      "ended_at": "2026-01-15T12:00:02Z",
      "duration_ms": 2000,
      "base": "origin/main",
      "head": "def456",
      "scope": "changed",
      "status": "fail",
      "counts": {
        "info": 0,
        "warn": 1,
        "error": 2
      },
      "files_scanned": 8,
      "lines_scanned": 300,
      "findings": 3
    }
  ]
}
