crates/diffguard-analytics/tests/snapshots/snapshot_tests__append_trend_run_trims_to_2.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: history
---
{
  "schema": "diffguard.trend_history.v1",
  "runs": [
    {
      "started_at": "2026-01-15T10:00:00Z",
      "ended_at": "2026-01-15T10:00:01Z",
      "duration_ms": 1000,
      "base": "origin/main",
      "head": "abc123",
      "scope": "added",
      "status": "fail",
      "counts": {
        "info": 0,
        "warn": 1,
        "error": 1,
        "suppressed": 5
      },
      "files_scanned": 12,
      "lines_scanned": 500,
      "findings": 1
    },
    {
      "started_at": "2026-01-15T10:00:00Z",
      "ended_at": "2026-01-15T10:00:01Z",
      "duration_ms": 1000,
      "base": "origin/main",
      "head": "abc123",
      "scope": "added",
      "status": "fail",
      "counts": {
        "info": 0,
        "warn": 1,
        "error": 1,
        "suppressed": 5
      },
      "files_scanned": 12,
      "lines_scanned": 500,
      "findings": 1
    }
  ]
}
